[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.140"
serde = {version = "1.0.219", features = ["derive"]}
actix-web = "4"
actix-rt = "2.10.0"
uuid = {version = "1.17.0" , features = ["v4"]}
tokio = { version = "1.45.1", features = ["full"] }
tokio-cron-scheduler = {version ="0.14.0", features = ["english"]}
